--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,7 +39,7 @@
         android:inputType="numberPassword"
         android:imeOptions="actionDone"/>
     <Button
-        android:id="@id/btn_login"
+        android:id="@id/btn_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
