--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -6,4 +6,5 @@
     <item name="btn_login" type="id">btn_login</item>
     <item name="new_user" type="id">textview_newuser</item>
     <item name="confirm_password" type="id">confirm_password</item>
+    <item name="btn_register" type="id">btn_register</item>
 </resources>
