第十三次提交，集成BottomBar底部导航栏

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -7,4 +7,6 @@
     <item name="new_user" type="id">textview_newuser</item>
     <item name="confirm_password" type="id">confirm_password</item>
     <item name="btn_register" type="id">btn_register</item>
+    <item name="bottomBar" type="id">bottombar</item>
+    <item name="fragment_container" type="id">frameLayout_container</item>
 </resources>
