第十五次提交，抽取标题栏

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -9,4 +9,6 @@
     <item name="btn_register" type="id">btn_register</item>
     <item name="bottomBar" type="id">bottombar</item>
     <item name="fragment_container" type="id">frameLayout_container</item>
+    <item name="back" type="id">imageview_back</item>
+    <item name="add" type="id">imageview_add</item>
 </resources>
