--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="qq_blue">#00CCFF</color>
     <color name="qq_blue_dark">#00A1DB</color>
+    <color name="red_dark">#aa0000</color>
+    <color name="red">#ff0000</color>
 </resources>
