第十七次提交，编写好友列表

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="qq_blue_dark">#00A1DB</color>
     <color name="red_dark">#aa0000</color>
     <color name="red">#ff0000</color>
+    <color name="colorDivider">#E8E8E8</color>
 </resources>
