--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -19,8 +19,9 @@
         android:background="@drawable/back_bg"
         android:layout_marginLeft="8dp"
         android:layout_centerVertical="true"
+        android:visibility="gone"
        />
-// android:visibility="gone"
+
     <ImageView
         android:id="@id/add"
         android:layout_width="30dp"
@@ -29,6 +30,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="8dp"
+        android:visibility="gone"
       />
-    //  android:visibility="gone"
+
 </RelativeLayout>
