--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="red_dark">#aa0000</color>
     <color name="red">#ff0000</color>
     <color name="colorDivider">#E8E8E8</color>
+    <color name="disable">#559c9c9c</color>
 </resources>
